--- a/client/unique-hack/src/components/ProjectCard.module.css
+++ b/client/unique-hack/src/components/ProjectCard.module.css
@@ -2,8 +2,13 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 2px;
     background: white;
-    padding: 20px 40px;
+    padding: 20px 40px 20px 20px;
     width: 100%;
+}
+
+.image {
+    border-radius: 2px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .teamText {
