--- a/client/unique-hack/src/components/List.module.css
+++ b/client/unique-hack/src/components/List.module.css
@@ -5,3 +5,16 @@
     padding: 20px 40px;
     width: 100%;
 }
+
+.projectCard {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 2px;
+    background: white;
+    padding: 10px;
+    width: 100%;
+}
+
+.image {
+    border-radius: 2px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
